# SearchEngine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.hpp  InvertedIndex.cpp  InvertedIndex.hpp  README.md  SearchServer.cpp  SearchServer.hpp  main.cpp  tests.cpp
